# ms-alumnos

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  RESULTADOSK6.md  alumno_mapping.py  alumno_resource.py  app.py  docker-compose.yml  home.py  pyproject.toml  wsgi.py
app/: __init__.py
app/config/: settings.py
app/mapping/: __init__.py  alumno_mapping.py  tipodocumento_mapping.py
app/models/: alumno.py  tipodocumento.py
app/repositories/: __init__.py
app/resources/: README.md  alumno_resource.py  cache_demo.py  circuit_demo.py  home.py  retry_demo.py
app/routes/: alumno_routes.py  tipodocumento_routes.py
app/schemas/: alumno_schema.py  tipodocumento_schema.py
app/services/: alumno_service.py
docker/: .env-example  docker-compose.yml
k6test/: README.md  k6-load-test.js  k6-simple.js  setup-k6.ps1  spike_tests.js
ms-alumnos-main/: README.md
ms-alumnos-main/app/config/: config.py
ms-alumnos-main/app/models/: alumno.py
ms-alumnos-main/app/resources/: __init__.py
ms-alumnos-main/app/services/: __init__.py
ms-alumnos-main/ms-alumnos-main/: alumnos_crear.py  deploy.ps1
ms-alumnos-main/ms-alumnos-main/docker/: docker-compose-circuit-breaker.yml
ms-alumnos-main/ms-alumnos-main/test/: instancias.py
ms-alumnos-main/ms-alumnos-main/traefik/: docker-traefik.yml
ms-alumnos-main/test/: instancias.py  test_app.py
test/: instancias.py  test_alumno.py  test_api_alumno.py  test_app.py  test_health.py  test_tipodocumento.py
traefik/: .env-example  docker-compose.yml  docker-traefik.yml
traefik/sql/: 01_init_sysacad.sql
(+4 files in other folders)
