[project]
name = "ms-alumno"
version = "1.0.0"
description = "microservicio de gestion de alumnos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.2",
    "flask-marshmallow==1.3.0",
    "flask-sqlalchemy==3.1.1",
    "marshmallow==4.0.0",
    "psycopg2>=2.9.11",
    "pyrefly==0.38.2",
    "python-dotenv==1.1.1",
    "sqlalchemy==2.0.41",
    "granian",
    "marshmallow-sqlalchemy==1.0.0",

]
