[project]
name = "ms-alumno"
version = "1.0.0"
description = "Microservicio de gestión de alumnos"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask==3.1.2",
    "flask-sqlalchemy==3.1.1",
    "flask-migrate==4.0.7",
    "sqlalchemy==2.0.41",
    "psycopg2-binary>=2.9.11",
    "python-dotenv==1.1.1",
    "marshmallow==4.0.0",
    "flask-marshmallow==1.3.0",
    "marshmallow-sqlalchemy==1.0.0"
]

[tool.uv]
index-url = "https://pypi.org/simple"
